localStorage, weekend color and delete added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- app.component.html -->
 <nav>
-  <a routerLink="/form">Formulario de Vacaciones</a>
-  <a routerLink="/calendar">Calendario</a>
-  <a routerLink="/my-calendar">Mi calendario</a>
+  <!-- <a routerLink="/form">Formulario de Vacaciones</a>
+  <a routerLink="/calendar">Calendario</a> -->
+  <a routerLink="/my-calendar">Calendario</a>
 </nav>
 <router-outlet></router-outlet>
