--- a/src/app/components/vacation-dialog/vacation-dialog.component.html
+++ b/src/app/components/vacation-dialog/vacation-dialog.component.html
@@ -13,6 +13,7 @@
   </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
+  <button mat-raised-button color="warn" *ngIf="canDelete" (click)="onDelete()">Eliminar</button>
   <button mat-raised-button color="primary" (click)="onSubmit()">Guardar</button>
   <button mat-button (click)="onCancel()">Cancelar</button>
 </mat-dialog-actions>
