Total vacation days and total hours label fixed, and router-outlet deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!-- app.component.html -->
-<nav>
-  <!-- <a routerLink="/form">Formulario de Vacaciones</a>
-  <a routerLink="/calendar">Calendario</a> -->
+<!-- <nav>
+  <a routerLink="/form">Formulario de Vacaciones</a>
+  <a routerLink="/calendar">Calendario</a>
   <a routerLink="/my-calendar">Calendario</a>
 </nav>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+<app-my-calendar></app-my-calendar>
