Calendar and vacation-form components deleted, header created and added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
-<!-- app.component.html -->
-<!-- <nav>
-  <a routerLink="/form">Formulario de Vacaciones</a>
-  <a routerLink="/calendar">Calendario</a>
-  <a routerLink="/my-calendar">Calendario</a>
-</nav>
-<router-outlet></router-outlet> -->
-<app-my-calendar></app-my-calendar>
+<app-header></app-header>
+
+<div class="app-content">
+  <app-my-calendar></app-my-calendar>
+</div>
