--- a/src/app/components/vacation-summary/vacation-summary.component.css
+++ b/src/app/components/vacation-summary/vacation-summary.component.css
@@ -1,22 +1,36 @@
-/* vacation-summary.component.css */
 .summary-container {
   display: flex;
   justify-content: space-around;
+  /* width: 1000px; */
   margin-bottom: 20px;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .summary-item {
-  background-color: #f5f5f5;
-  padding: 10px;
-  border-radius: 5px;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
   width: 45%;
   text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
+}
+
+.summary-item:hover {
+  transform: translateY(-5px);
 }
 
 .summary-item h3 {
   margin-top: 0;
+  color: #3f51b5;
+  font-size: 1.5em;
 }
 
 .summary-item p {
   margin: 5px 0;
+  font-size: 1.2em;
+  color: #333;
 }
