Header styles modified

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header class="app-header">
-  <img src="../../../assets/images/calendar.svg" alt="Logo" class="logo">
+  <img src="../../../assets/images/calendar.png" alt="Logo" class="logo">
   <h1 class="title">Calendario de Vacaciones</h1>
 </header>
