--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -14,6 +14,10 @@
 }
 
 .title {
-  font-size: 1.5em;
+  font-family: 'Poppins', sans-serif;
+  font-size: 2em;
+  font-weight: 600;
+  color: #f0f0f0;
   margin: 0;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
