Legend component added and weeksday order fixed (Mon-Sun)

--- a/src/app/components/my-calendar/my-calendar.component.html
+++ b/src/app/components/my-calendar/my-calendar.component.html
@@ -7,7 +7,10 @@
   <app-vacation-summary [selectedPerson]="selectedPerson"></app-vacation-summary>
 </div> -->
 
-<app-vacation-summary></app-vacation-summary>
+<div class="summary-legend-container">
+  <app-vacation-summary></app-vacation-summary>
+  <app-legend></app-legend>
+</div>
 
 <div class="calendar-container">
   <div class="calendar" style="width: 95%">
@@ -37,3 +40,5 @@
     </div>
   </div>
 </div>
+
+
