--- a/src/app/components/legend/legend.component.css
+++ b/src/app/components/legend/legend.component.css
@@ -1,5 +1,6 @@
-.summary-container {
+.legend-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   margin-bottom: 20px;
   background-color: #f9f9f9;
@@ -9,28 +10,34 @@
   height: 200px;
 }
 
-.summary-item {
+.legend-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.legend-item-all {
   background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
-  width: 45%;
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s;
 }
 
-.summary-item:hover {
+.legend-item-all:hover {
   transform: translateY(-5px);
 }
 
-.summary-item h3 {
-  margin-top: 0;
-  color: #3f51b5;
-  font-size: 1.5em;
+.color-box {
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  margin-right: 10px;
 }
 
-.summary-item p {
-  margin: 5px 0;
-  font-size: 1.2em;
+.label {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1em;
   color: #333;
 }
