--- a/src/app/components/my-calendar/my-calendar.component.css
+++ b/src/app/components/my-calendar/my-calendar.component.css
@@ -119,3 +119,24 @@
   color: #ccc;
   pointer-events: none;
 }
+
+.summary-legend-container {
+  display: flex;
+  align-items: stretch; /* Asegura que los hijos tengan la misma altura */
+  margin-bottom: 20px;
+}
+
+app-vacation-summary {
+  flex: 1;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+app-legend {
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
