Tooltip to see how many free hours got each day when you pass the mouse over that day

--- a/src/app/components/my-calendar/my-calendar.component.html
+++ b/src/app/components/my-calendar/my-calendar.component.html
@@ -33,6 +33,7 @@
             weekend: day.weekend
           }"
           (click)="selectDay(day)"
+          [matTooltip]="day.hours ? day.hours + ' horas de libre disposición' : ''"
         >
           {{ day.formatted }}
         </div>
