--- a/src/app/components/my-calendar/my-calendar.component.css
+++ b/src/app/components/my-calendar/my-calendar.component.css
@@ -140,3 +140,8 @@ app-legend {
   flex-direction: column;
   justify-content: space-between;
 }
+
+.mat-tooltip {
+  font-size: 0.9em;
+  padding: 5px;
+}
