Cleaned code and fixed disabled color days

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -14,7 +14,7 @@
 }
 
 .title {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 2em;
   font-weight: 600;
   color: #f0f0f0;
