--- a/src/app/components/my-calendar/my-calendar.component.html
+++ b/src/app/components/my-calendar/my-calendar.component.html
@@ -1,17 +1,3 @@
-<!-- <div style="display: flex; justify-content: space-between; padding-top: 20px; padding-right: 45px; padding-left: 45px;">
-  <app-user-selector
-    [persons]="persons"
-    [(selectedPerson)]="selectedPerson">
-  </app-user-selector>
-
-  <app-vacation-summary [selectedPerson]="selectedPerson"></app-vacation-summary>
-</div> -->
-
-<div class="summary-legend-container">
-  <app-vacation-summary></app-vacation-summary>
-  <app-legend></app-legend>
-</div>
-
 <div class="calendar-container">
   <div class="calendar" style="width: 95%">
     <div class="month-calendar" *ngFor="let month of months">
@@ -19,21 +5,19 @@
         <h2>{{ month.date.format("MMMM YYYY") }}</h2>
       </div>
       <div class="calendar-body mat-calendar">
-        <div class="calendar-weekday" *ngFor="let day of weekDays">
-          {{ day }}
-        </div>
+        <div class="calendar-weekday" *ngFor="let day of weekDays">{{ day }}</div>
         <div
           class="day"
           *ngFor="let day of month.days"
           [ngClass]="{
-            selected: isSelected(day),
+            selected: isSelected(day, month.date),
             disabled: !isCurrentMonth(day, month.date),
-            vacation: day.type === 'vacation',
-            hours: day.type === 'hours',
-            weekend: day.weekend
+            vacation:
+              day.type === 'vacation' && isCurrentMonth(day, month.date),
+              hours: day.type === 'hours' && isCurrentMonth(day, month.date),
+              weekend: day.weekend && isCurrentMonth(day, month.date),
           }"
           (click)="selectDay(day)"
-          [matTooltip]="day.hours ? day.hours + ' horas de libre disposición' : ''"
         >
           {{ day.formatted }}
         </div>
@@ -41,5 +25,3 @@
     </div>
   </div>
 </div>
-
-
