--- a/src/app/components/user-selector/user-selector.component.html
+++ b/src/app/components/user-selector/user-selector.component.html
@@ -1,12 +1,6 @@
 <div class="person-selector">
   <label for="person">Seleccionar Persona:</label>
-  <select
-    id="person"
-    [(ngModel)]="selectedPerson"
-    (change)="onPersonChange(selectedPerson)"
-  >
-    <option *ngFor="let person of persons" [value]="person">
-      {{ person }}
-    </option>
+  <select id="person" [(ngModel)]="selectedPerson" (change)="onPersonChange(selectedPerson)">
+    <option *ngFor="let person of persons" [value]="person">{{ person }}</option>
   </select>
 </div>
