--- a/src/app/components/vacation-dialog/vacation-dialog.component.html
+++ b/src/app/components/vacation-dialog/vacation-dialog.component.html
@@ -1,10 +1,9 @@
 <h2 mat-dialog-title>Seleccionar Opción</h2>
+
 <mat-dialog-content>
   <mat-radio-group [(ngModel)]="vacationType" class="full-width">
     <mat-radio-button value="vacation">Día de Vacaciones</mat-radio-button>
-    <mat-radio-button value="hours"
-      >Horas de Libre Disposición</mat-radio-button
-    >
+    <mat-radio-button value="hours">Horas de Libre Disposición</mat-radio-button>
   </mat-radio-group>
 
   <div *ngIf="vacationType === 'hours'" class="hours-input">
@@ -14,12 +13,9 @@
     </mat-form-field>
   </div>
 </mat-dialog-content>
+
 <mat-dialog-actions align="end">
-  <button mat-raised-button color="warn" *ngIf="canDelete" (click)="onDelete()">
-    Eliminar
-  </button>
-  <button mat-raised-button color="primary" (click)="onSubmit()">
-    Guardar
-  </button>
+  <button mat-raised-button color="warn" *ngIf="canDelete" (click)="onDelete()">Eliminar</button>
+  <button mat-raised-button color="primary" (click)="onSubmit()">Guardar</button>
   <button mat-button (click)="onCancel()">Cancelar</button>
 </mat-dialog-actions>
