Summary and legend added

--- a/src/app/components/my-calendar/my-calendar.component.html
+++ b/src/app/components/my-calendar/my-calendar.component.html
@@ -1,3 +1,8 @@
+<div class="summary-legend-container">
+  <app-vacation-summary></app-vacation-summary>
+  <app-legend></app-legend>
+</div>
+
 <div class="calendar-container">
   <div class="calendar" style="width: 95%">
     <div class="month-calendar" *ngFor="let month of months">
