Added functionality to view requested time-off hours for the day on mouse hover

--- a/src/app/components/my-calendar/my-calendar.component.html
+++ b/src/app/components/my-calendar/my-calendar.component.html
@@ -23,6 +23,7 @@
               weekend: day.weekend && isCurrentMonth(day, month.date),
           }"
           (click)="selectDay(day)"
+          [matTooltip]="day.hours ? day.hours + ' horas de libre disposición' : ''"
         >
           {{ day.formatted }}
         </div>
