--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,6 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
