--- a/src/app/components/my-calendar/my-calendar.component.html
+++ b/src/app/components/my-calendar/my-calendar.component.html
@@ -23,7 +23,7 @@
             holiday: day.holiday && isCurrentMonth(day, month.date)
           }"
           (click)="selectDay(day)"
-          [matTooltip]="day.holiday ? day.holidayName : (day.hours ? day.hours + ' horas de libre disposición' : '')"
+          [matTooltip]="day.holiday ? day.holidayName! : (day.hours ? day.hours + ' horas de libre disposición' : '')"
         >
           {{ day.formatted }}
         </div>
