Responsive and tailwindcss added to the app

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
-<header class="app-header">
-  <img src="../../../assets/images/calendar.png" alt="Logo" class="logo"/>
-  <h1 class="title">Calendario de Vacaciones</h1>
+<header class="flex items-center justify-between p-4 bg-indigo-600 text-white shadow-md flex-wrap">
+  <img src="../../../assets/images/calendar.png" alt="Logo" class="h-10 w-10 mb-2 sm:mb-0"/>
+  <h1 class="font-poppins text-2xl font-semibold text-gray-100 drop-shadow-md text-center sm:text-left w-full sm:w-auto">
+    Calendario de Vacaciones
+  </h1>
 </header>
