--- a/src/app/components/legend/legend.component.html
+++ b/src/app/components/legend/legend.component.html
@@ -1,8 +1,8 @@
-<div class="legend-container">
-  <div class="legend-item-all">
-    <div *ngFor="let item of legendItems" class="legend-item">
-      <span class="color-box" [ngStyle]="{ 'background-color': item.color }"></span>
-      <span class="label">{{ item.label }}</span>
+<div class="flex flex-col justify-around mb-5 bg-gray-50 p-5 rounded-lg shadow-md h-[200px]">
+  <div class="bg-white p-5 rounded-lg text-center shadow-md transition-transform duration-300 hover:-translate-y-1.5">
+    <div *ngFor="let item of legendItems" class="flex items-center mb-1.5">
+      <span class="w-5 h-5 rounded mr-2" [ngStyle]="{ 'background-color': item.color }"></span>
+      <span class="font-poppins text-base text-gray-800">{{ item.label }}</span>
     </div>
   </div>
 </div>
